# StaricovGleb_RIS-25-2b_LabsPSTU

./: .gitignore  CMakeLists.txt  README.md
sem_1/lab_7/: CMakeLists.txt  lab_7.docx  main.cpp  metod_nutona.cpp  metod_pol_del.cpp  metod_prost_iter.cpp
sem_2/Lab1/: Lab1.docx
sem_2/Lab1/Lab1/: CMakeLists.txt  fraction.cpp  fraction.h  main.cpp
sem_2/Lab10/: Lab10.docx
sem_2/Lab10/Lab10/: CMakeLists.txt  File_work.h  Pair.cpp  Pair.h  main.cpp
sem_2/Lab11/: Lab11.docx
sem_2/Lab11/Lab11/: AllTasks.h  CMakeLists.txt  List.h  Pair.h  main.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp
sem_2/Lab12/: Lab12.docx
sem_2/Lab12/Lab12/: CMakeLists.txt  Container.h  Pair.h  Task.cpp  Task.h  main.cpp
sem_2/Lab13/: Lab13.docx
sem_2/Lab13/Lab13/: CMakeLists.txt  Functors.h  Pair.h  Tasks.cpp  Tasks.h  main.cpp  task1.cpp  task2.cpp  task3.cpp
sem_2/Lab2/: Lab2.docx
sem_2/Lab2/Lab2/: CMakeLists.txt  applicant.cpp  applicant.h  main.cpp
sem_2/Lab3/: Lab3.docx
sem_2/Lab3/Lab3/: CMakeLists.txt  main.cpp  pair.cpp  pair.h
sem_2/Lab4/: Lab4.docx
sem_2/Lab4/Lab4/: CMakeLists.txt  employee.cpp  employee.h  main.cpp  person.cpp  person.h
sem_2/Lab5/: Lab5.docx
sem_2/Lab5/Lab5/: CMakeLists.txt  employee.cpp  employee.h  main.cpp  object.h  person.cpp  person.h  vector.cpp  vector.h
sem_2/Lab6/: Lab6.docx
sem_2/Lab6/Lab6/: CMakeLists.txt  iterator.h  list.cpp  list.h  main.cpp
sem_2/Lab7/: Lab7.docx
sem_2/Lab7/Lab7/: CMakeLists.txt  list.h  main.cpp  pair.cpp  pair.h
sem_2/Lab8/: Lab8.docx
sem_2/Lab8/Lab8/: Abiturient.cpp  Abiturient.h  CMakeLists.txt  Dialog.cpp  Dialog.h  Event.h  List.cpp  List.h  Object.cpp  Object.h  Person.cpp  Person.h  Tree.cpp  Tree.h  main.cpp
sem_2/Lab9/: Lab9.docx
sem_2/Lab9/Lab9/: CMakeLists.txt  Error.h  List.cpp  List.h  Vector.cpp  Vector.h  main.cpp
sem_2/Lab9/Lab9_2var/: CMakeLists.txt  Error.h  List.cpp  List.h  main.cpp
sem_2/lab_10/: CMakeLists.txt  lab_10.docx  main.cpp
sem_2/lab_11_hash/: CMakeLists.txt  lab_11(hash).docx  main.cpp
sem_2/lab_11_struct/: CMakeLists.txt  doubly_list.txt  lab_11(din_strukturi).docx  main.cpp  queue.txt  singly_head_only.txt  singly_head_tail.txt  stack.txt
sem_2/lab_3/: CMakeLists.txt  lab_3.docx  main.cpp
sem_2/lab_4/: CMakeLists.txt  lab_4.docx  main.cpp
sem_2/lab_5/: CMakeLists.txt  lab_5.docx  main.cpp
sem_2/lab_6/: CMakeLists.txt  lab_6.docx  main.cpp
sem_2/lab_7.1/: CMakeLists.txt  lab_7.1.docx  main.cpp
sem_2/lab_7.2/: CMakeLists.txt  lab_7.2.docx  main.cpp
sem_2/lab_7.2_2/: CMakeLists.txt  lab_7.2(2).docx  main.cpp
sem_2/lab_8/: CMakeLists.txt  lab_8.docx  main.cpp
sem_2/lab_9/: CMakeLists.txt  F1.txt  lab_9.docx  main.cpp
sem_2/lab_9_2/: CMakeLists.txt  F1.txt  lab_9(2).docx  main.cpp
sem_2/lab_new_sortirovki/: CMakeLists.txt  fast_sort_hoara.cpp  lab_new_sortirovki.docx  quick_sort_lomuto.cpp  sort_blochnaya.cpp  sort_podschetom.cpp  sort_shell.cpp  sort_sliyaniem.cpp
sem_2/lab_prostie_metodi_poiska/: CMakeLists.txt  bin_poisk.cpp  interp_poisk.cpp  lab_prostie_metodi_poiska.docx  lin_poisk.cpp  pryam_poisk.cpp
sem_2/lab_slojnie_metodi_poiska/: CMakeLists.txt  boyer_mur_horspula_poisk.cpp  boyer_mur_poisk.cpp  knut_morris_prat_poisk.cpp  lab_slojnie_metodi_poiska.docx
sem_2/lab_sortirovki/: CMakeLists.txt  lab_sortirovki.docx  sort_bubble.cpp  sort_vibora.cpp  sort_vstavkami.cpp
sem_2/lab_vneshnie_sortirovki/: CMakeLists.txt  lab_vneshnie_sortirovki.docx  sort_balanse_two_putey.cpp  sort_estestv_sliyanie.cpp  sort_mnogofaz.cpp
