cmake_minimum_required(VERSION 3.10)

project(all_labs LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)

# ===== SEM 1 =====
add_subdirectory(sem_1/lab_7)

# ===== SEM 2 =====
add_subdirectory(sem_2/lab_3)
add_subdirectory(sem_2/lab_4)
add_subdirectory(sem_2/lab_5)
add_subdirectory(sem_2/lab_6)
add_subdirectory(sem_2/lab_7.1)
add_subdirectory(sem_2/lab_7.2)
add_subdirectory(sem_2/lab_8)
add_subdirectory(sem_2/lab_9)
add_subdirectory(sem_2/lab_9_2)
add_subdirectory(sem_2/lab_10)
add_subdirectory(sem_2/lab_11_struct)
add_subdirectory(sem_2/lab_11_hash)
add_subdirectory(sem_2/lab_new_sortirovki)
add_subdirectory(sem_2/lab_prostie_metodi_poiska)
add_subdirectory(sem_2/lab_slojnie_metodi_poiska)
add_subdirectory(sem_2/lab_sortirovki)
add_subdirectory(sem_2/lab_vneshnie_sortirovki)