cmake_minimum_required(VERSION 3.10)

project(all_labs LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)

# ===== SEM 1 =====
add_subdirectory(sem_1/lab_7)

# ===== SEM 2 =====
add_subdirectory(sem_2/lab_3)
add_subdirectory(sem_2/lab_4)
add_subdirectory(sem_2/lab_5)
add_subdirectory(sem_2/lab_6)
add_subdirectory(sem_2/lab_7.1)
add_subdirectory(sem_2/lab_7.2)
add_subdirectory(sem_2/lab_8)
add_subdirectory(sem_2/lab_9)
add_subdirectory(sem_2/lab_9_2)
add_subdirectory(sem_2/lab_10)
add_subdirectory(sem_2/lab_11_struct)
add_subdirectory(sem_2/lab_11_hash)
add_subdirectory(sem_2/lab_new_sortirovki)
add_subdirectory(sem_2/lab_prostie_metodi_poiska)
add_subdirectory(sem_2/lab_slojnie_metodi_poiska)
add_subdirectory(sem_2/lab_sortirovki)
add_subdirectory(sem_2/lab_vneshnie_sortirovki)
add_subdirectory(sem_2/Lab1/Lab1)
add_subdirectory(sem_2/Lab2/Lab2)
add_subdirectory(sem_2/Lab3/Lab3)
add_subdirectory(sem_2/Lab4/Lab4)
add_subdirectory(sem_2/Lab5/Lab5)
add_subdirectory(sem_2/Lab6/Lab6)
add_subdirectory(sem_2/Lab7/Lab7)
add_subdirectory(sem_2/Lab8/Lab8)
add_subdirectory(sem_2/Lab9/Lab9)
add_subdirectory(sem_2/Lab9/Lab9_2var)
add_subdirectory(sem_2/Lab10/Lab10)
add_subdirectory(sem_2/Lab11/Lab11)
add_subdirectory(sem_2/Lab12/Lab12)
add_subdirectory(sem_2/Lab13/Lab13)